Fixed navigation IE

--- a/public/stylesheets/_includes/_home.less
+++ b/public/stylesheets/_includes/_home.less
@@ -463,7 +463,7 @@ h3 {
             @media screen and (min-width: 29rem){
                 display: inline-block;
                 float: left;
-                width: 8rem;
+                width: 7rem;
             }
             @media screen and (min-width: 35rem){
                 width: 10rem;
@@ -472,7 +472,7 @@ h3 {
         img {
             display: inline-block;
             margin-right: 1em;
-            width: 7em;
+            width: 7rem;
             height: 10em;
             @media screen and (min-width: 35rem){
                 width: 10rem;
@@ -485,10 +485,10 @@ h3 {
         }
         .text-container {
             display: inline-block;
-            float: right;
             overflow: hidden;
             @media screen and (min-width: 29rem){
-                width: calc(100% - 27rem);
+                float: right;
+                width: calc(100% - 28rem);
             }
             @media screen and (min-width: 35rem){
                 width: calc(100% - 33rem);
