--- a/public/stylesheets/_includes/_navigation.less
+++ b/public/stylesheets/_includes/_navigation.less
@@ -86,12 +86,15 @@ body {
         }
         .nav-list {
             display: inline-block;
-            float: right;
             text-transform: lowercase;
+            @media screen and (min-width: 55rem) {
+                float: right;
+            }
             li {
-                display: inline-block;
+                display: block;
                 padding-bottom: 0.2rem;
                 @media screen and (min-width: 55rem) {
+                    display: inline-block;
                     margin-left: 1.5rem;
                     padding-bottom: 0rem;
                 }
@@ -110,15 +113,17 @@ body {
         cursor: pointer;
         display: table;
         float: right;
-        margin-top: 0.3rem;
-        margin-left: 0.3rem;
-        -ms-transform: translateY(-1.5rem);
-        transform: translateY(-1.5rem);
+        margin-top: -0.5rem;
+        margin-right: -4.3rem;
+        -ms-transform: translateX(-4.3rem);
+        transform: translateX(-4.3rem);
         @supports(display:flex){
             display: flex;
-            -ms-transform: translateY(0);
-            transform: translateY(0);
+            -ms-transform: translateX(0);
+            transform: translateX(0);
             position: absolute;
+            margin-top: 0.5rem;
+            margin-right: 0;
             top: 0.2em;
             right: 0.2em;
             height: 2.2rem;
